# mcp_server_client

./: README.md  client_queries_examples.txt  init_weather_client.sh  pokemon_client_queries_example.txt  run_pokemon_client.sh  run_pokemon_server.sh  run_weather_client.sh  run_weather_server.sh  weather_client_queries_example.txt
weather/: README.md  pokemon.py  pyproject.toml  weather.py
weather-client/: .env_example  README.md  pyproject.toml  weather_client.py
