[project]
name = "weather-client"
version = "0.1.0"
description = "Weather and Pokemon MCP Clients using AWS Bedrock and Claude integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.71.0",
    "mcp>=1.19.0",
    "python-dotenv>=1.2.1",
    "boto3>=1.34.0",
]
